deps/v8/test/message/fail/class-accessors-private-undefined-setter-compound.out
# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:10: TypeError: '#a' was defined without a setter
    this.#a = 1;
            ^
TypeError: '#a' was defined without a setter
    at new C (*%(basename)s:10:13)
    at *%(basename)s:13:1
